<resources>
    <string name="app_name">Library</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Main</string>
    <string name="login">Sign in</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_location">Library</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dismis">Close</string>
    <string name="news">News</string>
    <string name="title_activity_bin">Bin</string>
    <string name="action_bin">Bin</string>
    <string name="lend">Lended</string>
    <string name="handed">Handed</string>
    <string name="remove_from_cart">Deleted from bin</string>
    <string name="add_to_cart">Added to bin</string>
    <string name="delete">Delete from bin</string>
    <string name="lendd">Lend</string>
    <string name="wantlend">Do you want lend these books?</string>
    <string name="lenddialog">Lend</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wantdelete">Dellete all?</string>
    <string name="lending">In progess</string>
    <string name="succes">We get a request</string>
    <string name="failure">Error</string>
    <string name="title_activity_lend">History</string>
    <string name="inprogres">In progress</string>
    <string name="canget">Ready to get</string>
    <string name="category">Category</string>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_categorybooks">Category</string>
    <string name="back">Return</string>
    <string name="title_activity_login_activitykk">Sign in</string>
    <string name="lendedin">Lended in</string>
    <string name="handedin">Handed in</string>
    <string name="term">Term</string>
    <string name="readytoget">Book ready to get</string>
    <string name="publisher">Publisher</string>
    <string name="logout">Logout</string>
    <string name="logoutyes">Logout succes</string>
    <string name="notloged">You are not logged</string>
    <string name="loggedas">User</string>
    <string name="notlogedheader">Not logged</string>
    <string name="action_search">Search</string>
    <string name="title_activity_search">Search</string>

</resources>
