<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_today_black_18dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_view_module_black_18dp"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_lends"
            android:icon="@drawable/ic_folder_shared_black_18dp"
            android:title="@string/lend" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings_black_18dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_account_box_black_18dp"
            android:title="@string/login" />
    </group>
</menu>
