<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_back"
            android:orderInCategory="100"
            android:title="@string/back"
            app:showAsAction="always"
            android:icon="@drawable/ic_keyboard_arrow_left_white_48dp" />
        <item android:id="@+id/action_search"
            android:title="@string/action_search"
            android:icon="@drawable/ic_search_white_24dp"
            app:showAsAction="always|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView" />
        <item
            android:id="@+id/action_bin"
            android:orderInCategory="100"
            android:title="@string/action_bin"
            android:icon="@drawable/ic_shopping_cart_white_24dp"
            app:showAsAction="always" />

</menu>